--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "PREFIX": "/",
     "dakogOten": "admin123456",
     "PORT": 8080,
-    "WEBVIEW": "https://",
+    "WEBVIEW": "https://singko-ai.onrender.com/",
     "RESTART_TIME": 30,
     "admin": ["100013036275290","61557924257806"]
 }
