--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "YetAnotherFBBot",
-  "version": "3.1.3 - Lite",
+  "version": "3.1.3",
   "description": "Lite Version of YAFB",
   "main": "index.js",
   "scripts": {
