--- a/fb_state/appstate.json
+++ b/fb_state/appstate.json
@@ -1,128 +1,1 @@
-[
-    {
-        "key": "dbln",
-        "value": "%7B%2261560368548383%22%3A%22HMaM3xc7%22%2C%2261560202178702%22%3A%22Qj5yCv6Q%22%2C%2261560506157269%22%3A%22wASqOZMA%22%2C%2261560305645489%22%3A%22P2LaOoRX%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.794Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "datr",
-        "value": "33pYZgYwI0Ci5wYPTDj7YKi5",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "sb",
-        "value": "33pYZtFnAGVzz7J6OZS_d44_",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B512x360x2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x512",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "fr",
-        "value": "0JR4vZpHvnA1iOUYL.AWXOrhBHEYJDQl5qvbT0k2NRnOM.BmWHrf..AAA.0.0.BmWq6f.AWVXZTc0jBU",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61560305645489",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "xs",
-        "value": "7%3Aegm0oHT-Du3v9Q%3A2%3A1717218975%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2518%3Btimestamp%3A1717218976",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100639192%3BT%3A28620316",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T05:16:30.795Z",
-        "lastAccessed": "2024-06-01T05:16:30.795Z"
-    }
-]
+[{"key":"datr","value":"27haZuIC6zT2vSkPPr5P1zhU","domain":"facebook.com","path":"/","hostOnly":true,"creation":"2024-06-01T05:59:58.870Z","lastAccessed":"2024-06-01T05:59:58.870Z"},{"key":"sb","value":"27haZhhxe9PihttBrA5mB-hX","domain":"facebook.com","path":"/","hostOnly":true,"creation":"2024-06-01T05:59:58.870Z","lastAccessed":"2024-06-01T05:59:58.870Z"},{"key":"c_user","value":"61560004006759","domain":"facebook.com","path":"/","hostOnly":true,"creation":"2024-06-01T05:59:58.870Z","lastAccessed":"2024-06-01T05:59:58.870Z"},{"key":"xs","value":"43%3AkG_iq0Mp3Spw_g%3A2%3A1717221596%3A-1%3A-1","domain":"facebook.com","path":"/","hostOnly":true,"creation":"2024-06-01T05:59:58.870Z","lastAccessed":"2024-06-01T05:59:58.870Z"},{"key":"fr","value":"0yrhjvjTityZEc6TJ.AWXFg6v3pJD1j0Vm0UzgGcgjK1w.BmWrjb..AAA.0.0.BmWrjb.AWVB4vmLX0g","domain":"facebook.com","path":"/","hostOnly":true,"creation":"2024-06-01T05:59:58.870Z","lastAccessed":"2024-06-01T05:59:58.870Z"},{"key":"m_page_voice","value":"61560004006759","domain":"facebook.com","path":"/","hostOnly":true,"creation":"2024-06-01T05:59:58.870Z","lastAccessed":"2024-06-01T05:59:58.870Z"}]
