--- a/fb_state/appstate.json
+++ b/fb_state/appstate.json
@@ -1,119 +1,74 @@
 [
-    {
-        "key": "dbln",
-        "value": "%7B%2261560368548383%22%3A%22bmIGmIqv%22%2C%2261560202178702%22%3A%22Qj5yCv6Q%22%2C%2261560506157269%22%3A%22wASqOZMA%22%2C%2261560305645489%22%3A%22ZqhwEltC%22%2C%2261560632542692%22%3A%22MRW93RY8%22%2C%2261560020476723%22%3A%22iDDxT0k2%22%2C%2261560662092284%22%3A%22qiUtVqFk%22%2C%2261560221287211%22%3A%22kGJ1cQg6%22%2C%2261559220400513%22%3A%22bIegWwTR%22%7D",
-        "domain": "facebook.com",
-        "path": "/login/device-based/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.846Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "datr",
-        "value": "33pYZgYwI0Ci5wYPTDj7YKi5",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "sb",
-        "value": "33pYZtFnAGVzz7J6OZS_d44_",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "ps_l",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x647",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "fr",
-        "value": "0JR4vZpHvnA1iOUYL.AWV6f_jBvFaKP3ZTYmVYz8sOGXk.BmWHrf..AAA.0.0.BmW5v_.AWVZ-OhuRsw",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61559220400513",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "xs",
-        "value": "49%3AmZ0L-IymatH5xw%3A2%3A1717279743%3A-1%3A7867",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B647x360x2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2518%3Btimestamp%3A1717279940",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100432342%3BT%3A28621332",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-06-01T22:12:08.847Z",
-        "lastAccessed": "2024-06-01T22:12:08.847Z"
-    }
+  {
+    "key": "datr",
+    "value": "IxhjZkZtF0Qup6NYcXNgEUf1",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-07T14:24:40.244Z",
+    "lastAccessed": "2024-06-07T14:24:40.244Z"
+  },
+  {
+    "key": "sb",
+    "value": "IxhjZmcEqq1X8o_kCu9C4nDL",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-07T14:24:40.244Z",
+    "lastAccessed": "2024-06-07T14:24:40.244Z"
+  },
+  {
+    "key": "c_user",
+    "value": "61559220400513",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-07T14:24:40.244Z",
+    "lastAccessed": "2024-06-07T14:24:40.244Z"
+  },
+  {
+    "key": "xs",
+    "value": "17%3A4qPQFGs3_R2bAQ%3A2%3A1717770277%3A-1%3A7867",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-07T14:24:40.244Z",
+    "lastAccessed": "2024-06-07T14:24:40.244Z"
+  },
+  {
+    "key": "fr",
+    "value": "0PL2wiRbS0bF7mD7o.AWUotS8h3VvB-q1eqzlfEOGixFQ.BmYxgk..AAA.0.0.BmYxgk.AWWWX2nHK1E",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-07T14:24:40.244Z",
+    "lastAccessed": "2024-06-07T14:24:40.244Z"
+  },
+  {
+    "key": "ps_n",
+    "value": "0",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-07T14:24:40.244Z",
+    "lastAccessed": "2024-06-07T14:24:40.244Z"
+  },
+  {
+    "key": "ps_l",
+    "value": "0",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-07T14:24:40.244Z",
+    "lastAccessed": "2024-06-07T14:24:40.244Z"
+  },
+  {
+    "key": "m_page_voice",
+    "value": "61559220400513",
+    "domain": "facebook.com",
+    "path": "/",
+    "hostOnly": true,
+    "creation": "2024-06-07T14:24:40.244Z",
+    "lastAccessed": "2024-06-07T14:24:40.244Z"
+  }
 ]
