--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "PREFIX": "/",
+    "PREFIX": "$",
     "dakogOten": "admin123456",
     "PORT": 8080,
-    "WEBVIEW": "https://singko-ai.onrender.com/",
+    "WEBVIEW": "https://chico-bot.onrender.com/",
     "RESTART_TIME": 30,
     "admin": ["100013036275290","61557924257806"]
 }
